Correction des templates de VigiBoard. Cette fois ça marche ! Le problème était lié à un bug dans Genshi (http://genshi.edgewall.org/ticket/179). Le problème est contourné de manière pas très propre, mais facile à mettre en œuvre contrairement à d'autres solutions trouvées.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2162 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -3,7 +3,7 @@
     xmlns:py="http://genshi.edgewall.org/"
     py:strip="">
 
-<py:def function="toolbar(themes, refresh_times, search)">
+<py:def function="toolbar">
 <div class="toolbar">
     <div class="toolbar_item">
         <a href="${tg.url('/')}">
