Modification du template de la page d'accueil de Vigiboard.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2165 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -52,11 +52,16 @@ body {
     width: 3em;
 }
 
-#pagination {
+#pagination,
+#table_title {
     text-align: center;
     border: 0;
 }
 
+#table_title {
+	font-weight: bold;
+	font-size: 1.1em;
+}
 
 .vigitable tbody tr {
 	border: solid 1px white;
