Renommage du dossier des plugins de VigiBoard en "plugins/", dans le code python et les templates. Quelques corrections dans le RootController de VigiBoard. Renommage du plugin "history" en "details" pour plus de cohérence avec le code HTML qu'il génère.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2168 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -265,7 +265,7 @@ div.clearingdiv {
     font-weight: bold;
 }
 
-.plugin_history,
+.plugin_details,
 .plugin_priority,
 .plugin_occurrences,
 .plugin_status,
@@ -287,12 +287,12 @@ div.clearingdiv {
     padding: 10px;
 }
 
-.plugin_history img {
+.plugin_details img {
     width: 2em;
     height: 2em;
 }
 
-.plugin_status img {
+.plugin_details img {
     width: 1.5em;
     height: 1.5em;
 }
