--- a/src/vigilo/themes/templates/vigiboard/plugins/hostname.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/hostname.html
@@ -7,7 +7,7 @@
 
 <th id="plugin_${name}" class="plugin_${name}" py:def="header_template(name, instance)">Hostname</th>
 
-<td class="plugin_${name}" py:def="data_template(name, instance, data)">${data[1]}</td>
+<td class="plugin_${name}" py:def="data_template(name, instance, data)">${data.hostname}</td>
 
 </html>
 
