Ajout du template de la page masked_events affichant la liste des évènements bruts masqués appartenant à un évènement corrélé donné.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2170 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/classical.css
+++ b/src/vigilo/themes/public/vigiboard/css/classical.css
@@ -13,8 +13,10 @@
 	border: solid 1px white;
 }
 
-#pagination,
-#table_title {
+.pagination,
+.table_title,
+.left_empty_col,
+.right_empty_col {
     color: white;
     background-color: #4682b4;
 }
