Ajout du template de la page event affichant l'historique d'un évènement brut donné.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2176 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -58,12 +58,20 @@ body {
     border: 0;
 }
 
-.left_empty_col {
+.raw_events .left_empty_col {
 	width: 10em;
 }
 
-.right_empty_col {
+.raw_events .right_empty_col {
 	width: 6em;
+}
+
+.event_history .left_empty_col {
+	width: 10em;
+}
+
+.event_history .right_empty_col {
+	width: 40em;
 }
 
 .table_title {
@@ -262,7 +270,11 @@ div.clearingdiv {
 .plugin_hls,
 .plugin_tt,
 .plugin_state,
-.plugin_history {
+.plugin_history,
+.plugin_user,
+.plugin_type,
+.plugin_value,
+.plugin_text {
     padding: 3px 10px;
 }
 
@@ -282,7 +294,8 @@ div.clearingdiv {
 .plugin_hls,
 .plugin_tt,
 .plugin_state,
-.plugin_history {
+.plugin_history,
+.plugin_value {
     text-align: center;
 }
 
