--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -11,7 +11,7 @@
 <?python from vigiboard.controllers.plugins import VigiboardRequestPlugin ?>
 
 <head> 
-    <title>Vigiboard - ${l_('Events table')}</title>
+    <title>Vigiboard - Events table</title>
 </head>
 
 <body>
