--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -1,38 +1,118 @@
-<html xmlns:py="http://genshi.edgewall.org/"
-      xmlns:xi="http://www.w3.org/2001/XInclude"
-      py:strip="">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+                    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:py="http://genshi.edgewall.org/"
+    xmlns:xi="http://www.w3.org/2001/XInclude">
 
-<py:def function="history_table(history,error)">
+<xi:include href="vigiboard.html" />
 
-<p py:if="(not history or len(history) == 0) and error == True">
-There is no history.
-</p>
+<?python from genshi import HTML ?>
+<?python from vigilo.models import StateName ?>
+<?python from vigiboard.controllers.plugins import VigiboardRequestPlugin ?>
 
-<py:if test="history and len(history) > 0">
-<table class="history_table" summary="History">
-	<thead>
-		<tr>
-			<td>Time</td>
-			<td>User</td>
-			<td>Type</td>
-			<td>Value</td>
-			<td>Text</td>
-		</tr>
-	</thead>
-	<tbody>
-		<py:for each="(index, entry) in enumerate(history)">
-		<tr class="${['odd', 'event'][index % 2]}">
-			<td>${entry.timestamp}</td>
-			<td>${entry.username}</td>
-			<td>${entry.type_action}</td>
-			<td>${entry.value}</td>
-			<td>${entry.text}</td>
-		</tr>
-		</py:for>
-	</tbody>
-</table>
-</py:if>
+<head> 
+    <title>Vigiboard - Event history</title>
+</head>
 
-</py:def>
+<body>	
+	<table class="vigitable event_history" summary="Event history" >
+		<thead>
+	        <tr>
+	            <th class="navigation_arrow">
+		        <py:choose><!--!
+			     --><img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
+			     --><a py:otherwise="" href="${tg.url('/%d' % (page-1))}"><!--!
+			         --><img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
+			     --></a>
+			    </py:choose>
+	            </th>
+	
+	            <th class="left_empty_col"></th>
+	
+	            <th colspan="3" class="table_title">
+		          	    <span>
+		          			Event history
+				        </span>
+	            </th>
+	
+	            <th class="right_empty_col"></th>
+	
+	            <th class="navigation_arrow">
+		        <py:choose><!--!
+			     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
+			     --><a py:otherwise="" href="${tg.url('/%d' % (page+1))}"><!--!
+			         --><img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/><!--!
+			     --></a>
+			    </py:choose>
+	            </th>
+	        </tr>
+	
+			<tr class="plugins">
+                <th colspan="2" id="plugin_date" class="plugin_date">Date<br />[Duration]</th>
+                <th id="plugin_user" class="plugin_user">User</th>
+                <th id="plugin_type" class="plugin_type">Type</th>
+                <th id="plugin_value" class="plugin_value">Value</th>
+                <th colspan="2" id="plugin_text" class="plugin_text">Text</th>
+			</tr>
+		</thead>
+		<tfoot>
+	        <tr>
+	            <th class="navigation_arrow">
+		        <py:choose><!--!
+			     --><img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
+			     --><a py:otherwise="" href="${tg.url('/%d' % (page-1))}"><!--!
+			         --><img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
+			     --></a>
+			    </py:choose>
+	            </th>
+	
+	            <th class="left_empty_col"></th>
+	
+	            <th colspan="3" class="pagination">
+	          	    <span>
+	          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
+	          		<py:if test="nb_pages > 1">
+	          		    <br/>
+			            Pages 
+			            <py:for each="p in range(1, nb_pages + 1)">
+			                <a py:if="p != page" href="${tg.url('/%d' % p)}" py:content="p" />
+			                <span py:if="p == page" py:replace="p" />
+			            </py:for>
+			        </py:if>
+			        </span>
+	            </th>
+	
+	            <th class="right_empty_col"></th>
+	
+	            <th class="navigation_arrow">
+		        <py:choose><!--!
+			     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
+			     --><a py:otherwise="" href="${tg.url('/%d' % (page+1))}"><!--!
+			         --><img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/><!--!
+			     --></a>
+			    </py:choose>
+	            </th>
+	        </tr>
+		</tfoot>
+	
+		<tbody py:choose="(not history or len(history) == 0) and error == True">		
+			<tr py:when="1">
+			    <td colspan="7">There is no history.</td>
+			</tr>
+	        
+	        <tr py:when="0" py:for="(index, entry) in enumerate(history)" class="${['odd', 'even'][index % 2]}">
+				<td class="plugin_date" colspan="2">
+                	${entry.get_date('timestamp')}
+                	<br />
+                	[${entry.get_since_date('timestamp')}]
+                </td>
+				<td class="plugin_user">${entry.username}</td>
+				<td class="plugin_type">${entry.type_action}</td>
+				<td class="plugin_value">${entry.value}</td>
+				<td class="plugin_text" colspan="2">${entry.text}</td>
+			</tr>
+		</tbody>
+	</table>
+</body>
 
 </html>
