--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -21,7 +21,7 @@
 	            <th class="navigation_arrow">
 		        <py:choose><!--!
 			     --><img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page-1))}"><!--!
+			     --><a py:otherwise="" href="${tg.url('/event/%d/%d' % (idevent, page - 1))}"><!--!
 			         --><img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
 			     --></a>
 			    </py:choose>
@@ -40,7 +40,7 @@
 	            <th class="navigation_arrow">
 		        <py:choose><!--!
 			     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page+1))}"><!--!
+			     --><a py:otherwise="" href="${tg.url('/event/%d/%d' % (idevent, page + 1))}"><!--!
 			         --><img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/><!--!
 			     --></a>
 			    </py:choose>
@@ -60,7 +60,7 @@
 	            <th class="navigation_arrow">
 		        <py:choose><!--!
 			     --><img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page-1))}"><!--!
+			     --><a py:otherwise="" href="${tg.url('/event/%d/%d' % (idevent, page - 1))}"><!--!
 			         --><img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
 			     --></a>
 			    </py:choose>
@@ -75,7 +75,7 @@
 	          		    <br/>
 			            Pages 
 			            <py:for each="p in range(1, nb_pages + 1)">
-			                <a py:if="p != page" href="${tg.url('/%d' % p)}" py:content="p" />
+			                <a py:if="p != page" href="${tg.url('/event/%d/%d' % (idevent, p))}" py:content="p" />
 			                <span py:if="p == page" py:replace="p" />
 			            </py:for>
 			        </py:if>
@@ -87,7 +87,7 @@
 	            <th class="navigation_arrow">
 		        <py:choose><!--!
 			     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page+1))}"><!--!
+			     --><a py:otherwise="" href="${tg.url('/event/%d/%d' % (idevent, page + 1))}"><!--!
 			         --><img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/><!--!
 			     --></a>
 			    </py:choose>
@@ -95,7 +95,7 @@
 	        </tr>
 		</tfoot>
 	
-		<tbody py:choose="(not history or len(history) == 0) and error == True">		
+		<tbody py:choose="not history">
 			<tr py:when="1">
 			    <td colspan="7">There is no history.</td>
 			</tr>
