--- a/src/vigilo/themes/templates/vigiboard/raw_events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/raw_events_table.html
@@ -20,7 +20,7 @@
 	            <th class="navigation_arrow">
 		        <py:choose><!--!
 			     --><img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page-1))}"><!--!
+			     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page - 1))}"><!--!
 			         --><img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
 			     --></a>
 			    </py:choose>
@@ -39,7 +39,7 @@
 	            <th class="navigation_arrow">
 		        <py:choose><!--!
 			     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page+1))}"><!--!
+			     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page + 1))}"><!--!
 			         --><img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/><!--!
 			     --></a>
 			    </py:choose>
@@ -62,7 +62,7 @@
 	            <th class="navigation_arrow">
 		        <py:choose><!--!
 			     --><img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page-1))}"><!--!
+			     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page - 1))}"><!--!
 			         --><img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
 			     --></a>
 			    </py:choose>
@@ -77,7 +77,7 @@
 	          		    <br/>
 			            Pages 
 			            <py:for each="p in range(1, nb_pages + 1)">
-			                <a py:if="p != page" href="${tg.url('/%d' % p)}" py:content="p" />
+			                <a py:if="p != page" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, p))}" py:content="p" />
 			                <span py:if="p == page" py:replace="p" />
 			            </py:for>
 			        </py:if>
@@ -89,7 +89,7 @@
 	            <th class="navigation_arrow">
 		        <py:choose><!--!
 			     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page+1))}"><!--!
+			     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page + 1))}"><!--!
 			         --><img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/><!--!
 			     --></a>
 			    </py:choose>
