Modification de la structure du header et du footer du tableau des évènements dans chacun des templates. Le titre et la pagination du tableau sont désormais correctement centrés, quel que soit le nombre de colonnes ou leur largeur.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2199 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/classical.css
+++ b/src/vigilo/themes/public/vigiboard/css/classical.css
@@ -13,12 +13,15 @@
 	border: solid 1px white;
 }
 
-.pagination,
-.table_title,
-.left_empty_col,
-.right_empty_col {
+.vigitable>thead>tr:first-child>th,
+.vigitable>tfoot>tr>th {
     color: white;
     background-color: #4682b4;
+}
+
+.left_arrow,
+.right_arrow {
+    background-color: #FFFFFF;
 }
 
 .history_table thead,
