--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -18,29 +18,31 @@
 	<table class="vigitable" summary="Event table" py:with="columns_count = sum([p[1].get_generated_columns_count() for p in plugins])">
 		<thead>
 	        <tr>
-	            <th class="navigation_arrow">
-		        <py:choose><!--!
-			     --><img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page-1))}"><!--!
-			         --><img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
-			     --></a>
-			    </py:choose>
-	            </th>
-	
-	            <th colspan="${columns_count - 2}" class="table_title">
-	          	    <span>
+	            <th colspan="${columns_count}">
+	        
+		            <span class="navigation_arrow left_arrow">
+				        <py:choose><!--!
+					     --><img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
+					     --><a py:otherwise="" href="${tg.url('/%d' % (page-1))}"><!--!
+					         --><img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
+					     --></a>
+					    </py:choose>
+		            </span>
+		
+		            <span class="navigation_arrow right_arrow">
+				        <py:choose><!--!
+					     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
+					     --><a py:otherwise="" href="${tg.url('/%d' % (page+1))}"><!--!
+					         --><img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/><!--!
+					     --></a>
+					    </py:choose>
+		            </span>
+		            
+	          	    <span class="table_title">
 	          			Events table
 			        </span>
-	            </th>
-	
-	            <th class="navigation_arrow">
-		        <py:choose><!--!
-			     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page+1))}"><!--!
-			         --><img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/><!--!
-			     --></a>
-			    </py:choose>
-	            </th>
+			        
+		    	</th>  
 	        </tr>
 	
 			<tr class="plugins">
@@ -52,36 +54,40 @@
 		</thead>
 		<tfoot>
 	        <tr>
-	            <th class="navigation_arrow">
-		        <py:choose><!--!
-			     --><img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page-1))}"><!--!
-			         --><img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
-			     --></a>
-			    </py:choose>
-	            </th>
-	
-	            <th colspan="${columns_count - 2}" class="pagination">
-	          	    <span>
-	          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
-	          		<py:if test="nb_pages > 1">
-	          		    <br/>
-			            Pages 
-			            <py:for each="p in range(1, nb_pages + 1)">
-			                <a py:if="p != page" href="${tg.url('/%d' % p)}" py:content="p" />
-			                <span py:if="p == page" py:replace="p" />
-			            </py:for>
-			        </py:if>
-			        </span>
-	            </th>
-	
-	            <th class="navigation_arrow">
-		        <py:choose><!--!
-			     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/%d' % (page+1))}"><!--!
-			         --><img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/><!--!
-			     --></a>
-			    </py:choose>
+	            <th colspan="${columns_count}">
+	            
+		            <span class="navigation_arrow left_arrow">
+				        <py:choose><!--!
+					     --><img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
+					     --><a py:otherwise="" href="${tg.url('/%d' % (page-1))}"><!--!
+					         --><img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
+					     --></a>
+					    </py:choose>
+		            </span>
+		
+		            <span class="navigation_arrow right_arrow">
+				        <py:choose><!--!
+					     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
+					     --><a py:otherwise="" href="${tg.url('/%d' % (page+1))}"><!--!
+					         --><img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/><!--!
+					     --></a>
+					    </py:choose>
+	            	</span>
+		
+		            <span class="pagination">
+		          	    <span>
+			          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
+			          		<py:if test="nb_pages > 1">
+			          		    <br/>
+					            Pages 
+					            <py:for each="p in range(1, nb_pages + 1)">
+					                <a py:if="p != page" href="${tg.url('/%d' % p)}" py:content="p" />
+					                <span py:if="p == page" py:replace="p" />
+					            </py:for>
+					        </py:if>
+				        </span>
+		            </span>
+				    
 	            </th>
 	        </tr>
 		</tfoot>
