--- a/src/vigilo/themes/templates/vigiboard/raw_events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/raw_events_table.html
@@ -17,93 +17,87 @@
 	<table class="vigitable raw_events" summary="Masked events list" py:with="columns_count = sum([p[1].get_generated_columns_count() for p in plugins])">
 		<thead>
 	        <tr>
-	            <th class="navigation_arrow">
-		        <py:choose><!--!
-			     --><img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page - 1))}"><!--!
-			         --><img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
-			     --></a>
-			    </py:choose>
-	            </th>
-	
-	            <th class="left_empty_col"></th>
-	
-	            <th colspan="6" class="table_title">
-		          	    <span>
-		          			Masked events list
-				        </span>
-	            </th>
-	
-	            <th class="right_empty_col"></th>
-	
-	            <th class="navigation_arrow">
-		        <py:choose><!--!
-			     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page + 1))}"><!--!
-			         --><img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/><!--!
-			     --></a>
-			    </py:choose>
-	            </th>
+		    	<th colspan="8">
+		            <span class="navigation_arrow left_arrow">
+				        <py:choose><!--!
+						     --><img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
+						     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page - 1))}"><!--!
+						         --><img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
+						     --></a>
+					    </py:choose>
+		            </span>
+		
+		            <span class="navigation_arrow right_arrow">
+				        <py:choose><!--!
+						     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
+						     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page + 1))}"><!--!
+						         --><img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/><!--!
+						     --></a>
+					    </py:choose>
+		            </span>
+		
+		            <span class="table_title">
+			          	    Masked events list
+		            </span>
+		    	</th>
 	        </tr>
 	
 			<tr class="plugins">
-                <th colspan="2" id="plugin_date" class="plugin_date">Date <br />[Duration]</th>
+                <th id="plugin_date" class="plugin_date">Date <br />[Duration]</th>
                 <th id="plugin_hostname" class="plugin_hostname">Host</th>
                 <th id="plugin_servicename" class="plugin_servicename">Service name</th>
                 <th id="plugin_state" class="plugin_state">Initial state</th>
                 <th id="plugin_state" class="plugin_state">Current state</th>
                 <th id="plugin_state" class="plugin_state">Peak state</th>
                 <th id="plugin_output" class="plugin_output">Output</th>
-                <th id="plugin_history" class="plugin_history" colspan="2">History</th>
+                <th id="plugin_history" class="plugin_history">History</th>
 			</tr>
 		</thead>
 		<tfoot>
 	        <tr>
-	            <th class="navigation_arrow">
-		        <py:choose><!--!
-			     --><img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page - 1))}"><!--!
-			         --><img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
-			     --></a>
-			    </py:choose>
-	            </th>
-	
-	            <th class="left_empty_col"></th>
-	
-	            <th colspan="6" class="pagination">
-	          	    <span>
-	          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
-	          		<py:if test="nb_pages > 1">
-	          		    <br/>
-			            Pages 
-			            <py:for each="p in range(1, nb_pages + 1)">
-			                <a py:if="p != page" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, p))}" py:content="p" />
-			                <span py:if="p == page" py:replace="p" />
-			            </py:for>
-			        </py:if>
-			        </span>
-	            </th>
-	
-	            <th class="right_empty_col"></th>
-	
-	            <th class="navigation_arrow">
-		        <py:choose><!--!
-			     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
-			     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page + 1))}"><!--!
-			         --><img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/><!--!
-			     --></a>
-			    </py:choose>
-	            </th>
+	        	<th colspan="8">
+	            	<span class="navigation_arrow left_arrow">
+				        <py:choose><!--!
+						     --><img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
+						     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page - 1))}"><!--!
+						         --><img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
+						     --></a>
+					    </py:choose>
+		            </span>
+		
+		            <span class="navigation_arrow right_arrow">
+				        <py:choose><!--!
+						     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
+						     --><a py:otherwise="" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, page + 1))}"><!--!
+						         --><img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/><!--!
+						     --></a>
+					    </py:choose>
+		            </span>
+		
+		            <span class="pagination">
+		          	    <span>
+			          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
+			          		<py:if test="nb_pages > 1">
+			          		    <br/>
+					            Pages 
+					            <py:for each="p in range(1, nb_pages + 1)">
+					                <a py:if="p != page" href="${tg.url('/masked_events/%d/%d' % (idcorrevent, p))}" py:content="p" />
+					                <span py:if="p == page" py:replace="p" />
+					            </py:for>
+					        </py:if>
+				        </span>
+		            </span>
+	        	</th>
 	        </tr>
 		</tfoot>
 	
 		<tbody py:choose="not rows_info['total_rows']">
 			<tr py:when="1">
-			    <td colspan="6">There are no events.</td>
+			    <td colspan="8">There are no events.</td>
 			</tr>
 	
 	        <tr py:when="0" py:for="(index, event) in enumerate(events)" class="${['odd', 'even'][index % 2]}">           
-   				<td class="plugin_date" colspan="2">
+   				<td class="plugin_date">
                 	${event[0].get_date('timestamp')}
                 	<br />
                 	[${event[0].get_since_date('timestamp')}]
@@ -114,7 +108,7 @@
                 <td class="plugin_state">${StateName.value_to_statename(event[0].current_state)}</td>
                 <td class="plugin_state">${StateName.value_to_statename(event[0].peak_state)}</td>
                 <td class="plugin_output">${event[0].message}</td>
-	            <td class="plugin_history" colspan="2">
+	            <td class="plugin_history">
 	            	<a href="${tg.url('/event/' + str(event[0].idevent))}"><img src="${tg.url('/images/history.png')}"/></a></td>
 	        </tr>
 		</tbody>
