Centrage vertical de la ligne de pagination.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2201 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -60,7 +60,15 @@ body {
 .vigitable .table_title {
 	font-size: 1.1em;
 	font-weight: bold;
-	line-height: 3em;
+	line-height: 3.1em;
+}
+
+.vigitable .line_pagination {
+	line-height: 3.4em;
+}
+
+.vigitable .pagination {
+	line-height: 1.7em;
 }
 
 .vigitable tbody tr {
