--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -75,17 +75,20 @@
 					    </py:choose>
 					</span>
 		            
-	          	    <span class="pagination">
-		          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
-		          		<py:if test="nb_pages > 1">
+	          	    <py:choose>
+		            	<span py:when="nb_pages > 1" class="pagination">
+			          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
 		          		    <br/>
 				            Pages 
 				            <py:for each="p in range(1, nb_pages + 1)">
-				                <a py:if="p != page" href="${tg.url('/event/%d/%d' % (idevent, p))}" py:content="p" />
+				                <a py:if="p != page" href="${tg.url('/%d' % p)}" py:content="p" />
 				                <span py:if="p == page" py:replace="p" />
 				            </py:for>
-				        </py:if>
-			        </span>
+				        </span>
+		            	<span py:otherwise="" class="line_pagination">
+			          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
+				        </span>
+	            	</py:choose>
 					
 	            </th>
 	        </tr>
