Correction de la mise en page du message d'erreur lorsque la table est vide.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2202 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -96,7 +96,7 @@
 	
 		<tbody py:choose="not history">
 			<tr py:when="1">
-			    <td colspan="5">There is no history.</td>
+			    <td colspan="5" class="plugin_error">There is no history.</td>
 			</tr>
 	        
 	        <tr py:when="0" py:for="(index, entry) in enumerate(history)" class="${['odd', 'even'][index % 2]}">
