--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -95,7 +95,7 @@
 	
 		<tbody py:choose="not rows_info['total_rows']">
 			<tr py:when="1">
-			    <td colspan="${columns_count}">There are no events.</td>
+			    <td colspan="${columns_count}" class="plugin_error">There are no events.</td>
 			</tr>
 	
 	        <tr py:when="0" py:for="(index, event) in enumerate(events)" class="${['odd', 'even'][index % 2]}">
