--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -11,11 +11,11 @@
 <?python from vigiboard.controllers.plugins import VigiboardRequestPlugin ?>
 
 <head> 
-    <title>Vigiboard - Event history</title>
+    <title>Vigiboard - Event #${idevent} history</title>
 </head>
 
 <body>	
-	<table class="vigitable event_history" summary="Event history" >
+	<table class="vigitable" summary="Event history" >
 		<thead>
 	        <tr>
 	            <th colspan="5">
@@ -39,7 +39,7 @@
 					</span>
 				    
 		          	<span class="table_title">
-		          		Event history
+		          		Event #${idevent} history
 				    </span>
 				    
 	            </th>
