--- a/src/vigilo/themes/templates/vigiboard/raw_events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/raw_events_table.html
@@ -48,9 +48,9 @@
                 <th id="plugin_date" class="plugin_date">Date <br />[Duration]</th>
                 <th id="plugin_hostname" class="plugin_hostname">Host</th>
                 <th id="plugin_servicename" class="plugin_servicename">Service name</th>
-                <th id="plugin_state" class="plugin_state">Initial state</th>
-                <th id="plugin_state" class="plugin_state">Current state</th>
-                <th id="plugin_state" class="plugin_state">Peak state</th>
+                <th id="plugin_initial_state" class="plugin_state">Initial state</th>
+                <th id="plugin_current_state" class="plugin_state">Current state</th>
+                <th id="plugin_peak_state" class="plugin_state">Peak state</th>
                 <th id="plugin_output" class="plugin_output">Output</th>
                 <th id="plugin_history" class="plugin_history">History</th>
 			</tr>
@@ -101,20 +101,20 @@
 			    <td colspan="8" class="plugin_error">There are no events.</td>
 			</tr>
 	
-	        <tr py:when="0" py:for="(index, event) in enumerate(events)" class="${['odd', 'even'][index % 2]}">           
+	        <tr py:when="0" py:for="(index, entry) in enumerate(events)" class="${['odd', 'even'][index % 2]}">           
    				<td class="plugin_date">
-                	${event[0].get_date('timestamp')}
+                	${entry[0].get_date('timestamp')}
                 	<br />
-                	[${event[0].get_since_date('timestamp')}]
+                	[${entry[0].get_since_date('timestamp')}]
                 </td>
-                <td class="plugin_hostname">${event.hostname}</td>
-                <td class="plugin_servicename">${event.servicename}</td>
-                <td class="plugin_state">${StateName.value_to_statename(event[0].initial_state)}</td>
-                <td class="plugin_state">${StateName.value_to_statename(event[0].current_state)}</td>
-                <td class="plugin_state">${StateName.value_to_statename(event[0].peak_state)}</td>
-                <td class="plugin_output">${event[0].message}</td>
+                <td class="plugin_hostname">${entry.hostname}</td>
+                <td class="plugin_servicename">${entry.servicename}</td>
+                <td class="plugin_state">${StateName.value_to_statename(entry[0].initial_state)}</td>
+                <td class="plugin_state">${StateName.value_to_statename(entry[0].current_state)}</td>
+                <td class="plugin_state">${StateName.value_to_statename(entry[0].peak_state)}</td>
+                <td class="plugin_output">${entry[0].message}</td>
 	            <td class="plugin_history">
-	            	<a href="${tg.url('/event/' + str(event[0].idevent))}"><img src="${tg.url('/images/history.png')}"/></a></td>
+	            	<a href="${tg.url('/event/%d' % entry[0].idevent)}"><img src="${tg.url('/images/history.png')}" title="History" alt="History"/></a></td>
 	        </tr>
 		</tbody>
 	</table>
